--- a/MLM2PRO-BT-APP/MLM2PRO-BT-APP.csproj
+++ b/MLM2PRO-BT-APP/MLM2PRO-BT-APP.csproj
@@ -11,6 +11,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="InTheHand.BluetoothLE" Version="4.0.36" />
       <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls" Version="7.1.3" />
       <PackageReference Include="NetCoreServer" Version="8.0.7" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
