--- a/MLM2PRO-BT-APP/MLM2PRO-BT-APP.csproj
+++ b/MLM2PRO-BT-APP/MLM2PRO-BT-APP.csproj
@@ -8,13 +8,23 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <UseWPF>true</UseWPF>
         <SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
+        <ApplicationIcon>icons8-golf-48.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
+      <Content Include="icons8-golf-48.ico" />
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="InTheHand.BluetoothLE" Version="4.0.36" />
+      <PackageReference Include="Markdig" Version="0.36.2" />
+      <PackageReference Include="MaterialDesignColors" Version="3.0.0" />
+      <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
       <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls" Version="7.1.3" />
       <PackageReference Include="NetCoreServer" Version="8.0.7" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="ShowMeTheXAML" Version="2.0.0" />
+      <PackageReference Include="ShowMeTheXAML.MSBuild" Version="2.0.0" />
     </ItemGroup>
 
 </Project>
