--- a/MLM2PRO-BT-APP/MLM2PRO-BT-APP.csproj
+++ b/MLM2PRO-BT-APP/MLM2PRO-BT-APP.csproj
@@ -7,7 +7,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UseWPF>true</UseWPF>
-        <Version>1.1.0.0</Version>
+        <Version>1.2.0.0</Version>
         <SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
         <ApplicationIcon>icons8-golf-48.ico</ApplicationIcon>
     </PropertyGroup>
@@ -17,19 +17,34 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="InTheHand.BluetoothLE" Version="4.0.36" />
-      <PackageReference Include="Markdig" Version="0.36.2" />
-      <PackageReference Include="MaterialDesignColors" Version="3.0.0" />
-      <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
+      <PackageReference Include="InTheHand.BluetoothLE" Version="4.0.44" />
+      <PackageReference Include="Markdig" Version="0.44.0" />
+      <PackageReference Include="MaterialDesignColors" Version="5.3.0" />
+      <PackageReference Include="MaterialDesignThemes" Version="5.3.0" />
       <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls" Version="7.1.3" />
       <PackageReference Include="NetCoreServer" Version="8.0.7" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-      <PackageReference Include="ShowMeTheXAML" Version="2.0.0" />
-      <PackageReference Include="ShowMeTheXAML.MSBuild" Version="2.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+      <PackageReference Include="ShowMeTheXAML" Version="2.1.1" />
+      <PackageReference Include="ShowMeTheXAML.MSBuild" Version="2.1.1" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="img\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Properties\Settings.Designer.cs">
+        <DesignTimeSharedInput>True</DesignTimeSharedInput>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Settings.settings</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Properties\Settings.settings">
+        <Generator>SettingsSingleFileGenerator</Generator>
+        <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+      </None>
     </ItemGroup>
 
 </Project>
